--- a/mana_rangers.html
+++ b/mana_rangers.html
@@ -288,7 +288,9 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/Aliados/Buhopng.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Soy un apasionado desarrollador de software con experiencia en la creación de soluciones técnicas innovadoras y efectivas. Mi enfoque se centra en la programación, la resolución de problemas y la mejora continua.</p>
+                                    <p class="mb-4"><ins><b>Descripción:</b></ins> criatura salida de las llamas y las cenizas, sus vivos colores rojizos iluminan a sus enemigos provocandoles daños en formas de llamas, gracias a estas mismas se dice que el fénix alcanza velocidades altísimas como si de propulsores se tratasen. Desgraciadamente algo hecho de ceniza no puede ser muy duradero por lo que su nivel de vida es bastante inferior al resto.</p>
+                                    <p class="mb-4"><ins><b>Historia:</b></ins>Los fénix son mascotas típicas de los rangers, gracias a su gran velocidad se encargan de enviar cartas a otros rangers, pese a esto, son grandes aliados siempre dispuestos a atacar a los enemigos por su señor. Al principio los fénix eran seres solitarios pero muy inteligentes, al ver la versatilidad de los rangers contra los enemigos oscuros, decidieron aliarse con ellos para que los rangers sacarán el máximo potencial de ellos mismos.</p>
+                                    <p class="mb-4">Desde los confines de la historia se sabe que los fénix son seres inmortales debido a que cuando mueren se convierten en cenizas, pero de estas cenizas son capaces de volver a la vida, por ello no tienen miedo cuando se enfrentan a sus enemigos, sus plumas son capaces de causar incendios forestales.</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Cerrar ventana
@@ -320,7 +322,9 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/Aliados/Aliado.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Soy diseñador con un ojo creativo y un compromiso inquebrantable con la estética visual. Mi misión es transformar mis ideas en elementos visuales cautivadores y funcionales que contribuyan a la identidad de marca y narrativa de un prooyecto.</p>
+                                    <p class="mb-4"><ins><b>Descripción:</b></ins> criatura de espeso pelaje que le brinda una alta inmunidad a daño letal, claro que este problema hace que sea especialmente esponjosa y achuchable. Sus características físicas también están relacionadas con sus características psicológicas haciendo que sea un aliado que produce poco daño en general. Por su espeso pelaje no se puede mover facilmente con sus patitas pero al ser tan liviano puede rodar como si de una planta rodante del desierto se tratara.</p>
+                                    <p class="mb-4"><ins><b>Historia:</b></ins> en la antigüedad las ovejas eran fuente de alimento para la mayoría de los pueblos pues se reproducían con facilidad para evitar esto, las ovejas evolucionaron para tener un mayor pelaje muy resistente a cortes. La lana que soltaban estas ovejas se empezó a utilizar para la ropa de invierno ya que era increíblemente caliente, por este motivo los fénix empezaron a robar grandes pedazos de lana para crear nidos. Debido a la gran cantidad de lana de estos seres la gente pensó que sería muy difícil que se movieran pero gracias a la firmeza de su pelaje estos seres ruedan por el mundo y se aprovechan de las corrientes de viento para moverse más rápidamente.</p>
+                                    <p class="mb-4">Los rangers se aprovecharon de estas criaturas para crear grandes rebaños de tanngs en lugares peligrosos donde eran posibles los ataques de enemigos, estos actúan como una muralla natural ya que es muy difícil atravesar grandes grupos de estos seres. Por otro lado los tanngs reciben comida y cuidado por parte de los rangers.</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Cerrar ventana
@@ -352,9 +356,9 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/Aliados/cangrejorocaPNG" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Soy una diseñadora creativa y multifacética con un enfoque en la creación de experiencias visuales excepcionales para aplicaciones y juegos. Mi experiencia abarca tres áreas fundamentales: diseño de interfaz de usuario (UI), diseño y desarrollo de portfolios y creación de Game Design Document (GDD).</p>
-                                    <p class="mb-4">Experiencia: diseño de interfaces intuitivas, creación de portfolios, creación de GDDs y elaboración de diagramas de flujo.</p>
-                                    <p class="mb-4">Correo: nn.maqueda.2020@alumnos.urjc.es</p>
+                                    <p class="mb-4"><ins><b>Descripción:</b></ins> criatura que carga con una gran gema en su espalda capaz de reflejar los rayos del sol haciendo un increíble daño a sus enemigos. Debido a esta misma gema es una criatura muy lenta, pero a su vez esta gema es altamente resistente.</p>
+                                    <p class="mb-4"><ins><b>Historia:</b></ins> el carcinos era un cangrejo que adoptó una perla mágica en su espalda para defenderse más fácilmente, gracias a esta defensa los carcinos se adentraron más hacia la tierra dejando la playa atrás. Después de dejar las playas los carcinos empezaron a pelear contra kappas por los territorios acuáticos reforzando sus caparazones y haciendo que sus perlas se incrustaran en sus espaldas. Normalmente los carcinos se esconden bajo las piedras de los pantanos, para hacer ataques sorpresas sobre los kappas.</p>
+                                    <p class="mb-4">Gracias a las perlas mágicas los rangers se involucraron mucho más con los carcinos imbuyendo sus perlas con magia para causar más daño. Desgraciadamente debido a la infusión de magia en estas las perlas crecieron enormemente haciendo que los carcinos perdieran velocidad. Sin embargo la relación entre los carcinos y los rangers sigue aumentando debido a la gran protección que se dan entre ellos, los rangers aumentando el poder de sus perlas y los carcinos protegiendo las tierras cercanas.</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Cerrar ventana
@@ -386,7 +390,9 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/Aliados/ranapng.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Soy un aficionado a los videojuegos, y me he dedicado a explorar gran diversidad de mundos inmersivos gracias a sus audios e historias. Busco aprender a trasmitir ese sentimiento a través de mis audios y mi portfolio es mi forma de expresarlo.</p>
+                                    <p class="mb-4"><ins><b>Descripción:</b></ins> criatura solitaria y territorial acostumbrada a las peleas constantes, gracias a esto, son a prueba de balas, pese su aspecto amigable tienen muy mala baba y se enfrentarán a cualquier enemigo que tengan por delante con su lengua y sus burbujas. Su alto daño demuestra que no hay nada que se le resista, sin embargo no son especialmente rápidos fuera del agua.</p>
+                                    <p class="mb-4"><ins><b>Historia:</b></ins>los kappa viven en los pantanos en grupos pequeños hasta el punto que en momentos viven en solitario, desde tiempos inmemoriales se encuentran cerca de las murallas de las ciudades debido a las aguas residuales que desprenden las mismas. Debido a sus peleas constantes contra otros kappas o carcinos que se atreven a entrar a su territorio, estos se han vuelto grandes peleadores.</p>
+                                    <p class="mb-4">Una vez aparecieron los Rangers, estos adoptaron a los kappas más pequeños criandolos en mejores condiciones que en las aguas residuales, dándoles colores más azulados de agua cristalina en lugar de los colores verdosos que tenían con anterioridad, sin embargo estos no perdieron su resistencia y daño de hecho gracias a la purificación sus heridas sanan más rápidamente, sin embargo estos se hicieron más lentos.</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Cerrar ventana
@@ -418,7 +424,8 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/Aliados/demonInsta.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Soy un amante de los videojuegos con experiencia en programación, centrado principalmente en el backend, busco crear videojuegos que transmitan mi amor por este medio además de crear experiencias diferentes y apasionantes.</p>
+                                    <p class="mb-4"><ins><b>Descripción:</b></ins> criatura enemiga que quiere dominar el reino de Hud. Sus ataques son cuerpo a cuerpo y son bastante escurridizos.</p>
+                                    <p class="mb-4"><ins><b>Historia:</b></ins>Pequeños enemigos que quieren consquistar el reino de Hud lo antes posible. Habitan en torres que los héroes deben destruir gracias a los aliados creados mediante los recursos elementales que crean sus fábricas</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Cerrar ventana
