--- a/mana_rangers.html
+++ b/mana_rangers.html
@@ -135,7 +135,7 @@
                     </div>
                     <div class="text-center mt-4">
                     <div class="text-center mt-4"><p class="lead">El reino de Hud es un mundo mágico en el que la paz no reina desde hace mucho tiempo. En las afueras del reino, el rey mandó construir una gran muralla de piedra para evitar que los enemigos atacaran el reino rápidamente. Dentro de los límites del reino se organizan cuatro generadores de recursos que ayudarán a acabar con los enemigos y, fue de ésta, se podrán construir fábricas adicionales.</p></div>
-                    <div class="text-center mt-4"><p class="lead">Estas fábricas generan los recursos elementales necesarios para construir fábricas adicionales o crear aliados que protejan al reino de Hud</p></div>
+                    <div class="text-center mt-4"><p class="lead">Estas fábricas generan los recursos elementales necesarios para construir fábricas adicionales o crear aliados que protejan al reino de Hud.</p></div>
                     <div class="container">
                     <div class="row justify-content-center">
                         <div class="col-lg-4 mb-5 mb-lg-0">
@@ -288,7 +288,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/Aliados/Buhopng.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4"><ins><b>Descripción:</b></ins> criatura salida de las llamas y las cenizas, sus vivos colores rojizos iluminan a sus enemigos provocandoles daños en formas de llamas, gracias a estas mismas se dice que el fénix alcanza velocidades altísimas como si de propulsores se tratasen. Desgraciadamente algo hecho de ceniza no puede ser muy duradero por lo que su nivel de vida es bastante inferior al resto.</p>
+                                    <p class="mb-4"><ins><b>Descripción:</b></ins> criatura salida de las llamas y las cenizas, sus vivos colores rojizos iluminan a sus enemigos provocándoles daño en forma de llamas, gracias a estas mismas se dice que el fénix alcanza velocidades altísimas como si de propulsores se tratasen. Desgraciadamente algo hecho de ceniza no puede ser muy duradero por lo que su nivel de vida es bastante inferior al resto.</p>
                                     <p class="mb-4"><ins><b>Historia:</b></ins>Los fénix son mascotas típicas de los rangers, gracias a su gran velocidad se encargan de enviar cartas a otros rangers, pese a esto, son grandes aliados siempre dispuestos a atacar a los enemigos por su señor. Al principio los fénix eran seres solitarios pero muy inteligentes, al ver la versatilidad de los rangers contra los enemigos oscuros, decidieron aliarse con ellos para que los rangers sacarán el máximo potencial de ellos mismos.</p>
                                     <p class="mb-4">Desde los confines de la historia se sabe que los fénix son seres inmortales debido a que cuando mueren se convierten en cenizas, pero de estas cenizas son capaces de volver a la vida, por ello no tienen miedo cuando se enfrentan a sus enemigos, sus plumas son capaces de causar incendios forestales.</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
@@ -354,7 +354,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/Aliados/cangrejorocaPNG" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/Aliados/cangrejorocaPNG.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4"><ins><b>Descripción:</b></ins> criatura que carga con una gran gema en su espalda capaz de reflejar los rayos del sol haciendo un increíble daño a sus enemigos. Debido a esta misma gema es una criatura muy lenta, pero a su vez esta gema es altamente resistente.</p>
                                     <p class="mb-4"><ins><b>Historia:</b></ins> el carcinos era un cangrejo que adoptó una perla mágica en su espalda para defenderse más fácilmente, gracias a esta defensa los carcinos se adentraron más hacia la tierra dejando la playa atrás. Después de dejar las playas los carcinos empezaron a pelear contra kappas por los territorios acuáticos reforzando sus caparazones y haciendo que sus perlas se incrustaran en sus espaldas. Normalmente los carcinos se esconden bajo las piedras de los pantanos, para hacer ataques sorpresas sobre los kappas.</p>
