--- a/mana_rangers.html
+++ b/mana_rangers.html
@@ -422,44 +422,10 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/Aliados/demonInsta.png" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/Aliados/demonPNG.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4"><ins><b>Descripción:</b></ins> criatura enemiga que quiere dominar el reino de Hud. Sus ataques son cuerpo a cuerpo y son bastante escurridizos.</p>
                                     <p class="mb-4"><ins><b>Historia:</b></ins>Pequeños enemigos que quieren consquistar el reino de Hud lo antes posible. Habitan en torres que los héroes deben destruir gracias a los aliados creados mediante los recursos elementales que crean sus fábricas</p>
-                                    <button class="btn btn-primary" data-bs-dismiss="modal">
-                                        <i class="fas fa-xmark fa-fw"></i>
-                                        Cerrar ventana
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Portfolio Modal 6-->
-        <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" aria-labelledby="portfolioModal6" aria-hidden="true">
-            <div class="modal-dialog modal-xl">
-                <div class="modal-content">
-                    <div class="modal-header border-0"><button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button></div>
-                    <div class="modal-body text-center pb-5">
-                        <div class="container">
-                            <div class="row justify-content-center">
-                                <div class="col-lg-8">
-                                    <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Yago Ortíz García</h2>
-                                    <!-- Icon Divider-->
-                                    <div class="divider-custom">
-                                        <div class="divider-custom-line"></div>
-                                        <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
-                                        <div class="divider-custom-line"></div>
-                                    </div>
-                                    <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/Yago_Ortiz.jpg" alt="..." />
-                                    <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Soy un verdadero entusiasta de los videojuegos, un apasionado que ha dedicado su vida a explorar y crear en el emocionante mundo de estos mismos. Mi portafolio es un testimonio de mi amor por esta forma de arte interactiva que me ha inspirado y cautivado durante años. Permíteme llevarte a un recorrido a través de mi viaje en los videojuegos.</p>
-                                    <p class="mb-4">Experiencia: laboral de informático y desarrollo (principalmente backend).</p>
-                                    <p class="mb-4">Correo: y.ortiz.2020@alumnos.urjc.es</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Cerrar ventana
