--- a/mana_rangers.html
+++ b/mana_rangers.html
@@ -43,6 +43,10 @@
                 <img class="masthead-avatar mb-5" src="assets/LOGO_JUEGO/MANA_RANGERS_LOGO.png"/>
                 <!-- Masthead Subheading-->
                 <!--<p class="masthead-subheading font-weight-light mb-0"><i>"Los elementos están de nuestra parte."</i></p>-->
+                <button class="btn btn-primary">
+                     <i class="fas fa-xmark fa-fw"></i>
+                     <a href="otra-página.html">otra página</a>
+                </button>
             </div>
         </header>
         <!-- Portfolio Section-->
