--- a/mana_rangers.html
+++ b/mana_rangers.html
@@ -44,8 +44,7 @@
                 <!-- Masthead Subheading-->
                 <!--<p class="masthead-subheading font-weight-light mb-0"><i>"Los elementos están de nuestra parte."</i></p>-->
                 <button class="btn btn-primary">
-                     <i class="fas fa-xmark fa-fw"></i>
-                     <a href="otra-página.html">otra página</a>
+                     <a href="otra-página.html">DESCARGAR AHORA</a>
                 </button>
             </div>
         </header>
