--- a/mana_rangers.html
+++ b/mana_rangers.html
@@ -43,9 +43,7 @@
                 <img class="masthead-avatar mb-5" src="assets/LOGO_JUEGO/MANA_RANGERS_LOGO.png"/>
                 <!-- Masthead Subheading-->
                 <!--<p class="masthead-subheading font-weight-light mb-0"><i>"Los elementos están de nuestra parte."</i></p>-->
-                <button class="btn btn-primary">
-                     <a href="otra-página.html">DESCARGAR AHORA</a>
-                </button>
+                <h4><a href="otra-página.html">DESCARGAR AHORA</a></h4>
             </div>
         </header>
         <!-- Portfolio Section-->
