--- a/mana_rangers.html
+++ b/mana_rangers.html
@@ -43,7 +43,7 @@
                 <img class="masthead-avatar mb-5" src="assets/LOGO_JUEGO/MANA_RANGERS_LOGO.png"/>
                 <!-- Masthead Subheading-->
                 <!--<p class="masthead-subheading font-weight-light mb-0"><i>"Los elementos están de nuestra parte."</i></p>-->
-                <h4><a href="otra-página.html">DESCARGAR AHORA</a></h4>
+                <h4><a href="https://happy-hyppo-studio.itch.io/">DESCARGAR AHORA</a></h4>
             </div>
         </header>
         <!-- Portfolio Section-->
