--- a/mana_rangers.html
+++ b/mana_rangers.html
@@ -43,7 +43,7 @@
                 <img class="masthead-avatar mb-5" src="assets/LOGO_JUEGO/MANA_RANGERS_LOGO.png"/>
                 <!-- Masthead Subheading-->
                 <!--<p class="masthead-subheading font-weight-light mb-0"><i>"Los elementos están de nuestra parte."</i></p>-->
-                <h4><a href="https://happy-hyppo-studio.itch.io/">DESCARGAR AHORA</a></h4>
+                <h4><a href="https://happy-hyppo-studio.itch.io/mana-rangers">JUEGA AQUÍ AHORA</a></h4>
             </div>
         </header>
         <!-- Portfolio Section-->
@@ -58,7 +58,10 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <div class="text-center mt-4">
-                    <div class="text-center mt-4"><p class="lead">Mana Rangers es un juego de un único jugador cuyo objetivo es innovar mediante la combinación de dos géneros de videojuegos, siendo estos: gestión de recursos y Tower Defense. En él, controlamos al aprendiz de mago que defiende una muralla que protege un reino de los enemigos mediante la creación de aliados elementales, eso sí, para crear dichas ayudas, es necesario gestionar los materiales que fabrican nuestras fábricas para no ser invadidos de la noche a la mañana.</p></div>
+                    <div class="text-center mt-4"><p class="lead">¡Eduardo ha desaparecido! Eduardo el magnífico, el gran amigo de los magos ha sido secuestrado por los enemigos del gran reino de Hud. ¡No podemos dejar que se salgan con la suya! Adéntrate en esta gran aventura estratégica de elementos y derrota a los demonios para salvar a Eduardo.</p></div>
+                </div>
+                <div class="text-center mt-4">
+                    <h4 class="text-center mt-4">¡Que el pollo frito te acompañe!</h4>
                 </div>
                 <div class="text-center mt-4">
                     <div class="text-center mt-4"><p class="lead">Este juego ha sido creado con la intención de crear un experiencia basada en el pensamiento computacional.</p></div>
@@ -74,14 +77,14 @@
                         <div class="col-lg-4 mb-5 mb-lg-0">
                             <h4 class="text-center mt-4">Gestión de recursos</h4>
                             <p class="text-center mt-4">
-                                Las fábricas producen recursos elementales que ayudarán a que los enemigos no puedan avanzar usándolos para crear aliados que nos ayuden o creando más fábricas para obtener recursos más rápido.
+                                El jugador debe colocar un máximo de cuatro fábricas elementales para obtener recursos que lo ayuden en su labor. Cada fábrica puede crear un elemento de entre los cinco disponibles y tiene la posibilidad de destruir la fábrica y construir otra de un elemento diferente si su estrategia no está funcionando.
                             </p>
                         </div>
                         <!-- Footer Social Icons-->
                         <div class="col-lg-4 mb-5 mb-lg-0">
                             <h4 class="text-center mt-4">Variedad de personajes</h4>
                             <p class="text-center mt-4">
-                                Hay diversos aliados dependiendo de su elemento carcaterítico con diferentes mecánicas que se pueden utilizar como estrategia para avanzar en la defensa del reino de Hud.
+                                El jugador dispone de un total de cuatro tipos de aliados que lo ayudarán en la batalla contra los demonios que se llevaron a Eduardo: los Kappa como elemento agua, los Carcinos como elemento tierra, los Tanggs como elemento viento y los Fénix como elemento fuego, cada uno con mecánicas propias que harán más dinámica la estrategia del jugador.
                             </p>
                         </div>
                         <div class="col-lg-4 mb-5 mb-lg-0">
@@ -130,13 +133,20 @@
                         </div>
                     </div>
                     </div>
+                    <div class="text-center mt-4"><p class="lead">Obviamente, existen debilidades y fortalezas entre los elementos y existe un sistema elemental en ellos. Los aliados de elemento agua son débiles al elemento tierra, los de tierra son débiles al elemento viento, etc.</p></div>
+                    <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-lg-4 mb-5 mb-lg-0">
+                            <h4 class="text-center mt-4">ESQUEMA ELEMENTAL</h4>
+                            <img src="assets/Elementos/elementoagua.png" width="200" height="200" alt="...">
+                        </div>
+                    </div>
                 </div>
                     <div class="divider-custom divider-light">
                         <div class="divider-custom-line"></div>
                     </div>
                     <div class="text-center mt-4">
-                    <div class="text-center mt-4"><p class="lead">El reino de Hud es un mundo mágico en el que la paz no reina desde hace mucho tiempo. En las afueras del reino, el rey mandó construir una gran muralla de piedra para evitar que los enemigos atacaran el reino rápidamente. Dentro de los límites del reino se organizan cuatro generadores de recursos que ayudarán a acabar con los enemigos y, fue de ésta, se podrán construir fábricas adicionales.</p></div>
-                    <div class="text-center mt-4"><p class="lead">Estas fábricas generan los recursos elementales necesarios para construir fábricas adicionales o crear aliados que protejan al reino de Hud.</p></div>
+                    <div class="text-center mt-4"><p class="lead">Para obtener dichos recursos, se necesitan de una serie de fábricas que los creen. Cada fábrica se puede crear en una zona especializada para ello y cada una de ella sólo puede crear un único elemento. Los elementos disponibles son: fuego, agua, tierra y aire. El jugador deberá pensar una estrategia con antelación para crear las fábricas que necesite. En el caso de que su estrategia fracase y requiera de algún cambio de fábrica, el juego permitirá destruir la fábrica que se desee cambiar y sustituirla por otrs que produzca un elemento diferente.</p></div>
                     <div class="container">
                     <div class="row justify-content-center">
                         <div class="col-lg-4 mb-5 mb-lg-0">
@@ -217,6 +227,24 @@
                     <!-- Portfolio Item 5-->
                     <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
                         <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal5">
+                            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                                <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                            </div>
+                            <img class="img-fluid" src="assets/Aliados/demonInsta.png" alt="..." />
+                        </div>
+                    </div>
+                    <!-- Portfolio Item 6-->
+                    <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
+                        <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal6">
+                            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                                <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                            </div>
+                            <img class="img-fluid" src="assets/Aliados/demonInsta.png" alt="..." />
+                        </div>
+                    </div>
+                    <!-- Portfolio Item 7-->
+                    <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
+                        <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal7">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
@@ -427,6 +455,72 @@
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4"><ins><b>Descripción:</b></ins> criatura enemiga que quiere dominar el reino de Hud. Sus ataques son cuerpo a cuerpo y son bastante escurridizos.</p>
                                     <p class="mb-4"><ins><b>Historia:</b></ins> pequeños enemigos que quieren consquistar el reino de Hud lo antes posible. Habitan en torres que los héroes deben destruir gracias a los aliados creados mediante los recursos elementales que crean sus fábricas</p>
+                                    <button class="btn btn-primary" data-bs-dismiss="modal">
+                                        <i class="fas fa-xmark fa-fw"></i>
+                                        Cerrar ventana
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Portfolio Modal 6-->
+        <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" aria-labelledby="portfolioModal5" aria-hidden="true">
+            <div class="modal-dialog modal-xl">
+                <div class="modal-content">
+                    <div class="modal-header border-0"><button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button></div>
+                    <div class="modal-body text-center pb-5">
+                        <div class="container">
+                            <div class="row justify-content-center">
+                                <div class="col-lg-8">
+                                    <!-- Portfolio Modal - Title-->
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">EL GRAN MAGO</h2>
+                                    <!-- Icon Divider-->
+                                    <div class="divider-custom">
+                                        <div class="divider-custom-line"></div>
+                                        <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                                        <div class="divider-custom-line"></div>
+                                    </div>
+                                    <!-- Portfolio Modal - Image-->
+                                    <img class="img-fluid rounded mb-5" src="assets/Aliados/demonPNG.png" alt="..." />
+                                    <!-- Portfolio Modal - Text-->
+                                    <p class="mb-4"><ins><b>Descripción:</b></ins> nuestro maestro, un hombre lleno de sabiduría y mucha hambre de pollo frito</p>
+                                    <p class="mb-4"><ins><b>Historia:</b></ins> es el mejor amigo de Eduardo. Su amistad con ese pollo es todo un misterio, ya que como amante del pollo, no se comprende como puede tenerle tanto aprecio a Eduardo como para no comérselo. Hombre de gran sabiduría que explica a su aprendiz como lidiar con los enemigos para rescatar a su amigo.</p>
+                                    <button class="btn btn-primary" data-bs-dismiss="modal">
+                                        <i class="fas fa-xmark fa-fw"></i>
+                                        Cerrar ventana
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Portfolio Modal 7-->
+        <div class="portfolio-modal modal fade" id="portfolioModal7" tabindex="-1" aria-labelledby="portfolioModal7" aria-hidden="true">
+            <div class="modal-dialog modal-xl">
+                <div class="modal-content">
+                    <div class="modal-header border-0"><button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button></div>
+                    <div class="modal-body text-center pb-5">
+                        <div class="container">
+                            <div class="row justify-content-center">
+                                <div class="col-lg-8">
+                                    <!-- Portfolio Modal - Title-->
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">EDUARDO</h2>
+                                    <!-- Icon Divider-->
+                                    <div class="divider-custom">
+                                        <div class="divider-custom-line"></div>
+                                        <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                                        <div class="divider-custom-line"></div>
+                                    </div>
+                                    <!-- Portfolio Modal - Image-->
+                                    <img class="img-fluid rounded mb-5" src="assets/Aliados/demonPNG.png" alt="..." />
+                                    <!-- Portfolio Modal - Text-->
+                                    <p class="mb-4"><ins><b>Descripción:</b></ins> un héroe entrañable del reino de Hud y el mejor amigo del Gran Mago. Un muslito de pollo con carácter y mucha personalidad. </p>
+                                    <p class="mb-4"><ins><b>Historia:</b></ins> antiguo héroe del reino de Hud. Como mejoor amigo del Gran Mago, nuestra misión es ayudarlo a escapar de los monstruos que lo han secuestrado. Su presencia impone a cualquiera que se le acerque. Pobres demonios lo que van a tener que aguantar por llevárselo.</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Cerrar ventana
